--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets/Script/GravityController.cs" />
+    <Compile Include="Assets/Script/Hole.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
