ホールの状態監視と簡易GUI追加

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Assets/Script/GravityController.cs" />
     <Compile Include="Assets/Script/Hole.cs" />
+    <Compile Include="Assets/Script/GameClearDetector.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
